--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -11,6 +11,11 @@ jobs:
       with:
           # Nix Flakes doesn't work on shallow clones
           fetch-depth: 0
+    - name: Checkout telomare repository
+      uses: actions/checkout@v2
+      with:
+        repository: Stand-In-Language/stand-in-language
+        path: stand-in-language
     - uses: cachix/install-nix-action@v12
       with:
         # nix_path: nixpkgs=channel:nixos-unstable
@@ -25,7 +30,9 @@ jobs:
         # Only needed for private caches
         #authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     # This might be overkill: telomare cache could be enough.
-    - run: cachix use iohk
+    - run: |
+        cachix use iohk
+        tree
     # - run: nix build .#telomare:exe:telomare-exe
     # - run: nix run .#telomare:test:telomare-test
     # - run: nix run .#telomare:test:telomare-parser-test
