--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -1,7 +1,10 @@
 name: "Telomare Documentation CI"
-on: # TODO: this
-  # pull_request:
-  # push:
+# on: # TODO: this
+#   pull_request:
+#   push:
+on:
+  repository_dispatch:
+    types: [sample_push]
 jobs:
   tests:
     runs-on: ubuntu-latest
