--- a/stack.yaml
+++ b/stack.yaml
@@ -8,16 +8,16 @@
 # A snapshot resolver dictates the compiler version and the set of packages
 # to be used for project dependencies. For example:
 #
-# resolver: lts-3.5
-# resolver: nightly-2015-09-21
-# resolver: ghc-7.10.2
+resolver: lts-16.12
+# resolver: nightly-2020-05-16
+# resolver: ghc-8.8
 #
 # The location of a snapshot can be provided as a file or url. Stack assumes
 # a snapshot provided as a file might change, whereas a url resource does not.
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-12.26
+# resolver: lts-12.26
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -63,7 +63,8 @@ packages:
 # Allow a newer minor version of GHC than the snapshot specifies
 # compiler-check: newer-minor
 
-nix:
-  enable: true
-  pure: true
-  shell-file: shell.nix
+# nix:
+#   enable: true
+#   pure: true
+#   packages: [zlib]
+#   shell-file: shell.nix
