--- a/stand-in-language-github-io.cabal
+++ b/stand-in-language-github-io.cabal
@@ -2,7 +2,7 @@ name:                stand-in-language-github-io
 version:             0.1.0.0
 -- synopsis:
 -- description:
-homepage:            https://github.com/githubuser/stand-in-language-github-io#readme
+homepage:            https://github.com/Stand-In-Language/stand-in-language-github-io#readme
 license:             BSD3
 license-file:        LICENSE
 author:              Author name here
@@ -17,5 +17,5 @@ executable stand-in-language-github-io
   main-is:             site.hs
   default-language:    Haskell2010
   ghc-options:         -threaded
-  build-depends:       base >= 4.7 && < 5,
-                       hakyll
+  build-depends:       base
+                     , hakyll
