now trying on github expecting errors 2

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -3,6 +3,7 @@ name: "Telomare Documentation CI"
 #   pull_request:
 #   push:
 on:
+  push:
   repository_dispatch:
     types: [sample_push]
 jobs:
