--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -37,4 +37,6 @@ jobs:
         name: telomare
         signingKey: '${{ secrets.CACHIX_SIGNING_KEY }}'
     - run: |
+        cachix use iohk
+        ls
         nix run github:hhefesto/telomare-make-haddock-script
